@@ -565,6 +565,10 @@ typedef enum {
     FS_ML_KEY_VOLUMEUP,
     FS_ML_KEY_VOLUMEDOWN,
     FS_ML_KEY_MUTE,
+    FS_ML_KEY_AUDIONEXT,
+    FS_ML_KEY_AUDIOPREV,
+    FS_ML_KEY_AUDIOSTOP,
+    FS_ML_KEY_AUDIOPLAY,
 
     FS_ML_KEY_LAST
 } fs_ml_key;
