@@ -259,10 +259,10 @@ static uint32_t g_sdl2_keys[] = {
     0,
     0,
     0, // 257 SDL_SCANCODE_MODE
-    0, // 258 SDL_SCANCODE_AUDIONEXT
-    0, // 259 SDL_SCANCODE_AUDIOPREV
-    0, // 260 SDL_SCANCODE_AUDIOSTOP
-    0, // 261 SDL_SCANCODE_AUDIOPLAY
+    FS_ML_KEY_AUDIONEXT, // 258 SDL_SCANCODE_AUDIONEXT
+    FS_ML_KEY_AUDIOPREV, // 259 SDL_SCANCODE_AUDIOPREV
+    FS_ML_KEY_AUDIOSTOP, // 260 SDL_SCANCODE_AUDIOSTOP
+    FS_ML_KEY_AUDIOPLAY, // 261 SDL_SCANCODE_AUDIOPLAY
     /* Mapped to same FS_ML_KEY as SDL_SCANMODE_MUTE. */
     FS_ML_KEY_MUTE, // 262 SDL_SCANCODE_AUDIOMUTE
     0, // 263 SDL_SCANCODE_MEDIASELECT
